# BPDA

./: .gitignore  wallet.pem
document-verification/: Cargo.toml
document-verification/meta/: Cargo.toml
document-verification/meta/src/: main.rs
document-verification/output/: document-verification.abi.json  document-verification.imports.json  document-verification.mxsc.json
document-verification/scenarios/: document_verification.scen.json
document-verification/src/: document_verification.rs
document-verification/tests/: document_verification_scenario_rs_test.rs
document-verification/wasm/: Cargo.toml
document-verification/wasm/src/: lib.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  config.ts
frontend/src/components/: RegisterDocument.tsx  VerifyDocument.tsx  WalletConnect.tsx  index.ts
frontend/src/services/: contractService.ts
frontend/src/utils/: hash.ts
scripts/: deploy.ps1
