[package]
name = "document-verification"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["you"]

[lib]
path = "src/document_verification.rs"

[dependencies.multiversx-sc]
version = "0.63.2"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.63.2"

[workspace]
members = [
    ".",
    "meta",
]
